# cython_with_poetry

./: README.md  build.py  poetry.toml  pyproject.toml
sample_package/: sum_ints.py
sample_package/excluded_module/: multiply_ints.py
sample_package/sub_module/: divide_ints.py
